tests/baselines/reference/moduleAugmentationExtendAmbientModule1.errors.txt
main.ts(6,9): error TS2454: Variable 'x' is used before being assigned.


==== main.ts (1 errors) ====
    /// <reference path="observable.d.ts"/>
    import { Observable } from "observable"
    import "./map";
    
    let x: Observable<number>;
    let y = x.map(x => x + 1);
            ~
!!! error TS2454: Variable 'x' is used before being assigned.
==== map.ts (0 errors) ====
    import { Observable } from "observable"
    
    (<any>Observable.prototype).map = function() { }
    
    declare module "observable" {
        interface Observable<T> {
            map<U>(proj: (e:T) => U): Observable<U>
        }
        namespace Observable {
            let someAnotherValue: number;
        }
    }
    
==== observable.d.ts (0 errors) ====
    declare module "observable" {
        class Observable<T> {
            filter(pred: (e:T) => boolean): Observable<T>;
        }
        namespace Observable {
            let someValue: number;
        }
    }
    